--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.ant-menu:not(.ant-menu-horizontal) {
+	background: transparent;
+}
+
+.ant-menu-item-selected {
+	background: transparent;
+}
