WIP: Add themes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 :root {
-    --background: theme('colors.white');
-    --background-secondary: theme('colors.gray.50');
+    --background: theme('colors.gray.100');
+    --background-secondary: theme('colors.white');
 
     --primary-dark: theme('colors.gray.900');
     --primary-medium: theme('colors.gray.700');
@@ -13,7 +13,7 @@
 
 [data-theme='dark'] {
     --background: theme('colors.black');
-    --background-secondary: theme('colors.gray.800');
+    --background-secondary: theme('colors.gray.900');
 
     --accent-dark: theme('colors.fuchsia.900');
     --accent-medium: theme('colors.fuchsia.700');
