--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,45 +2,52 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-    --background: theme('colors.gray.100');
-    --background-secondary: theme('colors.white');
-
-    --primary-dark: theme('colors.gray.900');
-    --primary-medium: theme('colors.gray.700');
-    --primary-light: theme('colors.gray.500');
+[data-theme='dark'] {
+    --background: theme('colors.dark1');
+    --background-secondary: theme('colors.dark2');
+    --background-tertiary: theme('colors.green.400');
+    --text: theme('colors.gray.300');
+    --accent: theme('colors.green.400');
+    --accent-secondary: theme('colors.bordertrans');
+    --from: theme('colors.green.400');
+    --to: theme('colors.blue.500');
 }
 
-[data-theme='dark'] {
+[data-theme='light'] {
+    --background: theme('colors.gray.100');
+    --background-secondary: theme('colors.white');
+    --text: theme('colors.gray.800');
+    --accent: theme('colors.fuchsia.500');
+    --accent-secondary: theme('colors.gray.900');
+    --from: theme('colors.red.400');
+    --to: theme('colors.purple.500');
+}
+
+[data-theme='black'] {
     --background: theme('colors.black');
     --background-secondary: theme('colors.gray.900');
-
-    --accent-dark: theme('colors.fuchsia.900');
-    --accent-medium: theme('colors.fuchsia.700');
-    --accent-light: theme('colors.fuchsia.500');
-
-    --primary-dark: theme('colors.gray.300');
-    --primary-medium: theme('colors.gray.200');
-    --primary-light: theme('colors.gray.100');
+    --text: theme('colors.gray.100');
+    --accent: theme('colors.fuchsia.500');
+    --accent-secondary: theme('colors.gray.200');
+    --from: theme('colors.red.400');
+    --to: theme('colors.purple.500');
 }
 
 [data-theme='emerald'] {
     --background: theme('colors.white');
-
-    --accent-dark: theme('colors.emerald.900');
-    --accent-medium: theme('colors.emerald.700');
-    --accent-light: theme('colors.emerald.500');
+    --text: theme('colors.gray.100');
+    --accent: theme('colors.fuchsia.500');
+    --accent-secondary: theme('colors.gray.200');
+    --from: theme('colors.red.400');
+    --to: theme('colors.purple.500');
 }
 
 [data-theme='pink'] {
     --background: theme('colors.gray.900');
     --background-secondary: theme('colors.gray.800');
-
-    --accent-dark: theme('colors.pink.900');
-    --accent-medium: theme('colors.pink.700');
-    --accent-light: theme('colors.pink.500');
-
-    --primary-dark: theme('colors.gray.300');
-    --primary-medium: theme('colors.gray.200');
-    --primary-light: theme('colors.gray.100');
+    --text: theme('colors.gray.100');
+    --accent: theme('colors.fuchsia.500');
+    --accent-secondary: theme('colors.gray.200');
+    --from: theme('colors.red.400');
+    --to: theme('colors.purple.500');
 }
