--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,52 +2,62 @@
 @tailwind components;
 @tailwind utilities;
 
-[data-theme='dark'] {
-    --background: theme('colors.dark1');
-    --background-secondary: theme('colors.dark2');
-    --background-tertiary: theme('colors.green.400');
+[data-theme='neon'] {
+    --background: theme('colors.navy1');
+    --background-secondary: theme('colors.navy2');
     --text: theme('colors.gray.300');
+    --text-secondary: theme('colors.gray.300');
     --accent: theme('colors.green.400');
     --accent-secondary: theme('colors.bordertrans');
     --from: theme('colors.green.400');
     --to: theme('colors.blue.500');
+    --outline: theme('colors.transparent');
 }
 
-[data-theme='light'] {
+[data-theme='pastel'] {
     --background: theme('colors.gray.100');
     --background-secondary: theme('colors.white');
     --text: theme('colors.gray.800');
-    --accent: theme('colors.fuchsia.500');
-    --accent-secondary: theme('colors.gray.900');
-    --from: theme('colors.red.400');
-    --to: theme('colors.purple.500');
+    --text-secondary: theme('colors.gray.800');
+    --accent: theme('colors.purple.500');
+    --accent-secondary: theme('colors.bordertrans2');
+    --from: theme('colors.purple.500');
+    --to: theme('colors.red.300');
+    --outline: theme('colors.transparent');
 }
 
-[data-theme='black'] {
+[data-theme='red'] {
     --background: theme('colors.black');
-    --background-secondary: theme('colors.gray.900');
-    --text: theme('colors.gray.100');
-    --accent: theme('colors.fuchsia.500');
-    --accent-secondary: theme('colors.gray.200');
+    --background-secondary: theme('colors.black');
+    --text: theme('colors.gray.200');
+    --text-secondary: theme('colors.gray.200');
+    --accent: theme('colors.red.400');
+    --accent-secondary: theme('colors.red.400');
     --from: theme('colors.red.400');
-    --to: theme('colors.purple.500');
+    --to: theme('colors.red.500');
+    --outline: theme('colors.red.400');
 }
 
-[data-theme='emerald'] {
-    --background: theme('colors.white');
-    --text: theme('colors.gray.100');
-    --accent: theme('colors.fuchsia.500');
-    --accent-secondary: theme('colors.gray.200');
-    --from: theme('colors.red.400');
-    --to: theme('colors.purple.500');
+[data-theme='basic'] {
+    --background: theme('colors.gray.100');
+    --background-secondary: theme('colors.white');
+    --text: theme('colors.black');
+    --text-secondary: theme('colors.black');
+    --accent: theme('colors.black');
+    --accent-secondary: theme('colors.black');
+    --from: theme('colors.black');
+    --to: theme('colors.black');
+    --outline: theme('colors.black');
 }
 
-[data-theme='pink'] {
+[data-theme='dark'] {
     --background: theme('colors.gray.900');
-    --background-secondary: theme('colors.gray.800');
-    --text: theme('colors.gray.100');
-    --accent: theme('colors.fuchsia.500');
-    --accent-secondary: theme('colors.gray.200');
-    --from: theme('colors.red.400');
-    --to: theme('colors.purple.500');
+    --background-secondary: theme('colors.black');
+    --text: theme('colors.white');
+    --text-secondary: theme('colors.white');
+    --accent: theme('colors.blue.300');
+    --accent-secondary: theme('colors.transparent');
+    --from: theme('colors.pink.400');
+    --to: theme('colors.blue.400');
+    --outline: theme('colors.transparent');
 }
