--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,7 @@
     --from: theme("colors.green.400");
     --to: theme("colors.blue.500");
     --outline: theme("colors.transparent");
+    --shadow: theme("boxShadow.none");
 }
 
 [data-theme="soft"] {
@@ -24,6 +25,7 @@
     --from: theme("colors.purple.500");
     --to: theme("colors.red.300");
     --outline: theme("colors.transparent");
+    --shadow: theme("boxShadow.md");
 }
 
 [data-theme="ruby"] {
@@ -36,6 +38,7 @@
     --from: theme("colors.red.400");
     --to: theme("colors.red.500");
     --outline: theme("colors.red.400");
+    --shadow: theme("boxShadow.none");
 }
 
 [data-theme="dark"] {
@@ -48,6 +51,7 @@
     --from: theme("colors.pink.400");
     --to: theme("colors.blue.400");
     --outline: theme("colors.transparent");
+    --shadow: theme("boxShadow.none");
 }
 
 [data-theme="basic"] {
@@ -60,6 +64,7 @@
     --from: theme("colors.black");
     --to: theme("colors.black");
     --outline: theme("colors.black");
+    --shadow: theme("boxShadow.none");
 }
 
 select {
