--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,66 +5,81 @@
 :root {
     --background: theme("colors.navy1");
     --background-secondary: theme("colors.navy2");
-    --text: theme("colors.gray.300");
-    --text-secondary: theme("colors.gray.300");
+    --text: theme("colors.gray.100");
     --accent: theme("colors.green.400");
     --accent-secondary: theme("colors.bordertrans");
     --from: theme("colors.green.400");
     --to: theme("colors.blue.500");
     --outline: theme("colors.transparent");
     --shadow: theme("boxShadow.none");
+    --text-left: theme("colors.white");
+    --text-right: theme("colors.white");
+    --background-left-from: theme("colors.blue.600");
+    --background-left-to: theme("colors.green.500");
 }
 
 [data-theme="soft"] {
     --background: theme("colors.gray.100");
     --background-secondary: theme("colors.white");
     --text: theme("colors.gray.800");
-    --text-secondary: theme("colors.gray.800");
     --accent: theme("colors.purple.500");
     --accent-secondary: theme("colors.bordertrans2");
     --from: theme("colors.purple.500");
     --to: theme("colors.red.300");
     --outline: theme("colors.transparent");
     --shadow: theme("boxShadow.md");
+    --text-left: theme("colors.white");
+    --text-right: theme("colors.gray.700");
+    --background-left-from: theme("colors.purple.500");
+    --background-left-to: theme("colors.red.300");
 }
 
 [data-theme="ruby"] {
     --background: theme("colors.black");
     --background-secondary: theme("colors.black");
     --text: theme("colors.gray.100");
-    --text-secondary: theme("colors.gray.100");
     --accent: theme("colors.red.400");
     --accent-secondary: theme("colors.red.400");
     --from: theme("colors.red.400");
     --to: theme("colors.red.500");
     --outline: theme("colors.red.400");
     --shadow: theme("boxShadow.none");
+    --text-left: theme("colors.black");
+    --text-right: theme("colors.red.400");
+    --background-left-from: theme("colors.red.500");
+    --background-left-to: theme("colors.red.400");
 }
 
 [data-theme="dark"] {
     --background: theme("colors.gray.900");
     --background-secondary: theme("colors.black");
     --text: theme("colors.gray.100");
-    --text-secondary: theme("colors.gray.100");
     --accent: theme("colors.blue.300");
     --accent-secondary: theme("colors.transparent");
     --from: theme("colors.pink.400");
     --to: theme("colors.blue.400");
     --outline: theme("colors.transparent");
     --shadow: theme("boxShadow.none");
+    --text-left: theme("colors.gray.900");
+    --text-right: theme("colors.gray.100");
+    --background-left-from: theme("colors.pink.400");
+    --background-left-to: theme("colors.blue.300");
 }
 
 [data-theme="basic"] {
     --background: theme("colors.gray.100");
     --background-secondary: theme("colors.white");
     --text: theme("colors.black");
-    --text-secondary: theme("colors.black");
     --accent: theme("colors.black");
     --accent-secondary: theme("colors.black");
     --from: theme("colors.black");
     --to: theme("colors.black");
     --outline: theme("colors.black");
     --shadow: theme("boxShadow.none");
+    --text-left: theme("colors.black");
+    --text-right: theme("colors.black");
+    --background-left-from: theme("colors.gray.300");
+    --background-left-to: theme("colors.gray.300");
 }
 
 select {
