--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,6 +16,7 @@
     --text-right: theme("colors.white");
     --background-left-from: theme("colors.blue.600");
     --background-left-to: theme("colors.green.500");
+    --button: theme("colors.navy2");
 }
 
 [data-theme="soft"] {
@@ -32,6 +33,7 @@
     --text-right: theme("colors.gray.700");
     --background-left-from: theme("colors.purple.500");
     --background-left-to: theme("colors.red.300");
+    --button: theme("colors.white");
 }
 
 [data-theme="ruby"] {
@@ -48,6 +50,7 @@
     --text-right: theme("colors.red.400");
     --background-left-from: theme("colors.red.500");
     --background-left-to: theme("colors.red.400");
+    --button: theme("colors.black");
 }
 
 [data-theme="dark"] {
@@ -64,6 +67,7 @@
     --text-right: theme("colors.gray.100");
     --background-left-from: theme("colors.pink.400");
     --background-left-to: theme("colors.blue.300");
+    --button: theme("colors.black");
 }
 
 [data-theme="basic"] {
@@ -78,8 +82,9 @@
     --shadow: theme("boxShadow.none");
     --text-left: theme("colors.black");
     --text-right: theme("colors.black");
-    --background-left-from: theme("colors.gray.300");
-    --background-left-to: theme("colors.gray.300");
+    --background-left-from: theme("colors.gray.200");
+    --background-left-to: theme("colors.gray.200");
+    --button: theme("colors.black");
 }
 
 select {
